[project]
name = "python-tornado-mongoclient"
version = "0.1.0"
description = "A Python Tornado Web MongoClient HTTP service."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo>=4.16.0",
    "tornado>=6.5.5",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "coverage>=7.13.5",
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "jake>=3.0.14",
    "pymongo>=4.16.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "tornado>=6.5.5",
]
