[project]
name = "python-tornado-mongoclient"
version = "0.1.0"
description = "A Python Tornado Web MongoClient HTTP service."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo>=4.16.0",
    "tornado>=6.5.5",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "coverage>=7.13.5",
    "deptry>=0.25.1",
    "pymongo>=4.16.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "tornado>=6.5.5",
]

[tool.deptry]
package_module_name_map = { bson = "pymongo" }

[tool.bandit]
exclude_dirs = [".venv"]
